tests/invalid/coerce_ambig.err_exp
coerce_ambig.m:030: In clause for predicate `ambig1'/0:
coerce_ambig.m:030:   error: unresolved type ambiguity.
coerce_ambig.m:030:   The variable [38;5;87m`X'[39;49m can have either of the following types:
coerce_ambig.m:030:     [38;5;226mcoerce_ambig.citrus,[39;49m
coerce_ambig.m:030:     [38;5;226mcoerce_ambig.fruit.[39;49m
coerce_ambig.m:036: In clause for predicate `ambig2'/0:
coerce_ambig.m:036:   error: unresolved type ambiguity.
coerce_ambig.m:036:   The following variables have ambiguous types.
coerce_ambig.m:036:   [38;5;87m`X1'[39;49m can have either of the following types:
coerce_ambig.m:036:     [38;5;226mcoerce_ambig.another_fruit,[39;49m
coerce_ambig.m:036:     [38;5;226mcoerce_ambig.fruit.[39;49m
coerce_ambig.m:036:   [38;5;87m`X2'[39;49m can have either of the following types:
coerce_ambig.m:036:     [38;5;226mcoerce_ambig.another_fruit,[39;49m
coerce_ambig.m:036:     [38;5;226mcoerce_ambig.fruit.[39;49m
coerce_ambig.m:045: In clause for predicate `ambig3'/1:
coerce_ambig.m:045:   error: the type of [38;5;87m`V_3'[39;49m is [38;5;203munresolved;[39;49m cannot coerce
coerce_ambig.m:045:   from `coerce_ambig.list(V_1)' to
coerce_ambig.m:045:   `coerce_ambig.list(coerce_ambig.fruit)'.
coerce_ambig.m:051: In clause for predicate `ambig4'/0:
coerce_ambig.m:051:   error: the type of [38;5;87m`X'[39;49m is [38;5;203munresolved;[39;49m cannot coerce from
coerce_ambig.m:051:   `coerce_ambig.list(V_1)' to
coerce_ambig.m:051:   `coerce_ambig.list(coerce_ambig.citrus)'.
coerce_ambig.m:052: In clause for predicate `ambig4'/0:
coerce_ambig.m:052:   error: the type of [38;5;87m`X'[39;49m is [38;5;203munresolved;[39;49m cannot coerce from
coerce_ambig.m:052:   `coerce_ambig.list(V_1)' to
coerce_ambig.m:052:   `coerce_ambig.list(coerce_ambig.fruit)'.
For more information, recompile with `-E'.
